[package]
name = "ugv"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
memmap2 = "0.9"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
rayon = "1.10"
parking_lot = "0.12"
byteorder = "1.5"
poll-promise = { version = "0.3", features = ["web"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Request", "RequestInit", "RequestMode", "Response", "Window", "File", "FileList", "FileReader", "Blob"] }
log = "0.4"
gloo-net = "0.6"
gloo-file = { version = "0.3", features = ["futures"] }
