[package]
name = "ugv"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
memmap2 = "0.9"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
rayon = "1.10"
parking_lot = "0.12"
byteorder = "1.5"
poll-promise = { version = "0.3", features = ["web"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
# fastx with optional URL feature (only enabled on native)
fastx = { path = "../fastx", default-features = false }

# BAM/SAM file support (pure Rust for WASM compatibility)
# Using main noodles crate to ensure version compatibility
noodles = { version = "0.90", features = ["bam", "sam", "core"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.15"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
fastx = { path = "../fastx", default-features = false, features = ["url"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Request", "RequestInit", "RequestMode", "Response", "Window", "File", "FileList", "FileReader", "Blob", "BlobPropertyBag", "Document", "Element", "HtmlInputElement", "HtmlAnchorElement", "HtmlLinkElement", "EventTarget", "Event", "Headers", "Url", "HtmlCanvasElement", "CanvasRenderingContext2d", "ImageData"] }
log = "0.4"
gloo-net = "0.6"
gloo-file = { version = "0.3", features = ["futures"] }
getrandom = { version = "0.2", features = ["js"] }
